fix:discount svg size fix:header meta color in * path fix:card in services

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       href="/splash/tapsi-2048x2732.png"
       media="(min-device-width: 1024px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2)"
     />
-    <meta name="theme-color" content="#FF7140" />
+    <meta name="theme-color" content="#fff" />
     <link
       rel="apple-touch-icon"
       href="/apple-touch-icon-180x180.png"
