add:install btn add:loadings

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, shrink-to-fit=no, user-scalable=no, minimum-scale=1.0, viewport-fit=cover"
     />
+    <meta name="apple-itunes-app" content="app-id=YOUR_APP_STORE_ID, affiliate-data=YOUR_AFFILIATE_DATA, app-argument=YOUR_URL_SCHEME_OR_URL" />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vazir-font/29.1.0/font-face.min.css">
     <link rel="manifest" href="/manifest.json" />
     <link rel="shortcut icon" href="/public/vite.svg" />
