--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, shrink-to-fit=no, user-scalable=no, minimum-scale=1.0, viewport-fit=cover"
     />
     <meta name="apple-itunes-app" content="app-id=YOUR_APP_STORE_ID, affiliate-data=YOUR_AFFILIATE_DATA, app-argument=YOUR_URL_SCHEME_OR_URL" />
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vazir-font/29.1.0/font-face.min.css">
+    <link rel="apple-touch-icon" href="/favicon.ico" sizes="180x180">
     <link rel="manifest" href="/manifest.json" />
-    <link rel="shortcut icon" href="/public/vite.svg" />
+    <link rel="shortcut icon" href="/favicon.ico"/>
     <link rel="canonical" href="https://app.tapsi.cab/" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="#ffffff" />
     <meta name="apple-mobile-web-app-title" content="TAPSI" />
     <title>TAPSI | وب اپلیکیشن تپسی</title>
